--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="bootstrap"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
     />
-    <link rel="manifest" href="src/icn.json" />
+    <link rel="manifest" href="./src/icn.json" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
