--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <link rel="manifest" href="./src/icn.json" />
     <meta name="theme-color" content="#ffffff" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Projeto Salao" />
   </head>
